--- a/wasi-js-example/package.json
+++ b/wasi-js-example/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "wasi-js": "^1.7.3"
+  }
 }
