--- a/pixi.toml
+++ b/pixi.toml
@@ -6,7 +6,7 @@ platforms = ["osx-arm64", "linux-64"]
 version = "0.1.0"
 
 [tasks]
-build = """
+build_wasm = """
 clang \
     --target=wasm32-unknown-unknown-wasm \
     -I stdlib/ \
@@ -19,11 +19,20 @@ clang \
     -o example.wasm \
     build.c
 """
+build_native = """
+clang \
+    -I wasi/ \
+    -I . \
+    -O2 -s \
+    example.c test_example.c native/wasi.c \
+    -o test_example
+"""
+
 test_wasmtime = { cmd="""
 wasmtime run --invoke mysin example.wasm 1.5 &&
 wasmtime run --invoke add example.wasm 5 7
-""", depends-on=["build"] }
-test_node = { cmd="node example.js", depends-on=["build"] }
+""", depends-on=["build_wasm"] }
+test_node = { cmd="node example.js", depends-on=["build_wasm"] }
 all = { depends-on=["test_wasmtime", "test_node"] }
 
 [dependencies]
