Get dependencies working

--- a/pixi.toml
+++ b/pixi.toml
@@ -5,7 +5,7 @@ name = "wasi"
 platforms = ["osx-arm64", "linux-64"]
 version = "0.1.0"
 
-[tasks]
+[feature.wasm.tasks]
 build_wasm = """
 clang \
     --target=wasm32-unknown-unknown-wasm \
@@ -19,24 +19,36 @@ clang \
     -o example.wasm \
     build.c
 """
-build_native = """
-clang \
-    -I wasi/ \
-    -I . \
-    -O2 -s \
-    example.c test_example.c native/wasi.c \
-    -o test_example
-"""
 
 test_wasmtime = { cmd="""
 wasmtime run --invoke mysin example.wasm 1.5 &&
 wasmtime run --invoke add example.wasm 5 7
 """, depends-on=["build_wasm"] }
 test_node = { cmd="node example.js", depends-on=["build_wasm"] }
-all = { depends-on=["test_wasmtime", "test_node"] }
+test_native = { cmd="./test_example", depends-on=["build_native"] }
+all = { depends-on=["test_wasmtime", "test_node", "test_native"] }
 
-[dependencies]
+[feature.wasm.dependencies]
 clang = ">=20.1.4,<21"
 lld = ">=20.1.4,<21"
 wabt = ">=1.0.37,<2"
 nodejs = ">=22.13.0,<22.14"
+
+
+[feature.native.tasks]
+build_native = { cmd="""
+clang \
+    -I wasi/ \
+    -I . \
+    -O2 -s \
+    example.c test_example.c native/wasi.c \
+    -o test_example
+""" }
+
+[feature.native.dependencies]
+wabt = ">=1.0.37,<2"
+
+
+[environments]
+native = ["native"]
+wasm = ["wasm"]
