--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -15,12 +15,40 @@ jobs:
       - uses: prefix-dev/setup-pixi@v0.8.8
         with:
           pixi-version: v0.44.0
-
           cache: true
 
-      - name: Setup `wasmtime`
+      - name: Build and test Linux
+        run: pixi run -e linux test_linux
+
+  macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: prefix-dev/setup-pixi@v0.8.8
+        with:
+          pixi-version: v0.44.0
+          cache: true
+
+      - name: Build and test macOS
+        run: pixi run -e macos test_macos
+
+  wasm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: prefix-dev/setup-pixi@v0.8.8
+        with:
+          pixi-version: v0.44.0
+          cache: true
+
+      - name: Setup wasmtime
         uses: bytecodealliance/actions/wasmtime/setup@v1
         with:
           version: "32.0.0"
 
-      - run: pixi run all
+      - name: Build and test WebAssembly
+        run: |
+          pixi run -e wasm build_wasm
+          wasmtime arena.wasm
