--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,7 @@ jobs:
             os: windows-latest
             pixi-command: |
               call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-              pixi run -e windows test_windows
+              REM pixi run -e windows test_windows
           - platform: wasm
             os: ubuntu-latest
             pixi-command: |
