Do not include stdlib

--- a/pixi.toml
+++ b/pixi.toml
@@ -10,6 +10,7 @@ build_wasm = """
 clang \
     --target=wasm32-wasi \
     -nostdlib \
+    -nostdinc \
     -fno-builtin \
     -I stdlib \
     -Wl,--no-entry \
@@ -30,7 +31,9 @@ lld = ">=20.1.4,<21"
 build_linux = { cmd="""
 clang \
     -nostdlib \
+    -nostdinc \
     -fno-builtin \
+    -I stdlib \
     -o arena_linux \
     standalone_arena.c
 """, inputs = ["standalone_arena.c", "native/wasi_linux.c"] }
@@ -44,6 +47,7 @@ clang = ">=20.1.4,<21"
 build_macos = { cmd="""
 clang \
     -nostdlib \
+    -nostdinc \
     -fno-builtin \
     -I stdlib \
     -o arena_macos \
@@ -62,6 +66,8 @@ test_macos = { cmd="./arena_macos", depends-on=["build_macos"] }
 build_windows = { cmd="""
 cl \
     /nologo \
+    /X \
+    /I"stdlib" \
     /GS- \
     /Gs0 \
     /kernel \
