--- a/pixi.toml
+++ b/pixi.toml
@@ -31,6 +31,7 @@ clang \
     base/base_io.c \
     base/buddy.c \
     base/arena.c \
+    base/scratch.c \
     native/wasi_wasm.c
 """
 
@@ -60,6 +61,7 @@ clang \
     base/base_io.c \
     base/buddy.c \
     base/arena.c \
+    base/scratch.c \
     native/wasi_linux.c
 """
 
@@ -89,6 +91,7 @@ clang \
     base/base_io.c \
     base/buddy.c \
     base/arena.c \
+    base/scratch.c \
     native/wasi_macos.c \
     -lSystem \
     -Wl,-e,__start
@@ -122,6 +125,7 @@ cl \
     base/base_io.c \
     base/buddy.c \
     base/arena.c \
+    base/scratch.c \
     native/wasi_windows.c \
     && \
 link \
@@ -139,6 +143,7 @@ link \
     base_io.obj \
     buddy.obj \
     arena.obj \
+    scratch.obj \
     wasi_windows.obj \
     /out:arena_windows.exe
 """
